@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.808 2008-12-10 08:26:20 tr Exp $
+# $Id: CHANGES,v 1.809 2008-12-15 07:15:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,7 +10,10 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
- - (2008/12/10) Added the text auto link function to the standard
+ - (2008/12/15) Added new ticket attributes to CSV export of ticket in ticket
+    search. New attributes are 'Closed', 'FirstLock' and 'FirstResponse'.
+ - (2008/12/10) Added the text auto link feature ot add http links for text body
+    to add icons after conigured expressions the standard.
  - (2008/12/08) Added feature to install included packages located under
     var/packages/*.opm on first/initial setup.
  - (2008/12/08) Added new postmaster filter to check if new arrived email is
